--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
   <properties>
 
     <scala.version>2.11.8</scala.version>
+    <spark.version>2.3.0</spark.version>
   </properties>
 
   <repositories>
@@ -30,6 +31,20 @@
       <groupId>org.scala-lang</groupId>
       <artifactId>scala-library</artifactId>
       <version>${scala.version}</version>
+    </dependency>
+      <!--引入spark core的依赖-->
+    <dependency>
+      <groupId>org.apache.spark</groupId>
+      <artifactId>spark-core_2.11</artifactId>
+      <version>${spark.version}</version>
+
+    </dependency>
+    <!--引入spark sql的依赖-->
+    <dependency>
+      <groupId>org.apache.spark</groupId>
+      <artifactId>spark-sql_2.11</artifactId>
+      <version>${spark.version}</version>
+
     </dependency>
   </dependencies>
 
